<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CountdownActivity</string>
    <string name="menu_settings">Pick Ringtone</string>
    <string name="countdown_end">KABOOM!</string>
    <string name="countdown_during">counting down:\u0020</string>
    <string name="countdown_initial">Awaiting countdown time...</string>
    <string name="pick_time_text">Pick countdown time...</string>
    <string name="start_text">Start countdown</string>
    <string name="stop_text">Stop countdown or alarm</string>
    <string name="spinner_text">Pick seconds for countdown</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>

</resources>
