<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <TextView
            android:id="@+id/countdownDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50px"
            android:text="@string/countdown_initial"
            />

    <Button
            android:id="@+id/pickButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countdownDisplay"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dip"
            android:text="@string/pick_time_text"
            />

    <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pickButton"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dip"
            android:text="@string/start_text"
            />

    <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pickButton"
            android:layout_toLeftOf="@id/startButton"
            android:layout_marginLeft="10dip"
            android:text="@string/stop_text"
            />

</RelativeLayout>

